--- a/.github/workflows/merge-change-log-to-main.yml
+++ b/.github/workflows/merge-change-log-to-main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           message="Merge change log updates from $GITHUB_REF_NAME"
           body="Merge change log updates from \`$GITHUB_REF_NAME\`."
-          branch=merge-change-log-updates-from-${GITHUB_REF_NAME//\//-}
+          branch="merge-change-log-updates-from-${GITHUB_REF_NAME//\//-}"
 
           git format-patch --stdout HEAD..origin/$GITHUB_REF_NAME CHANGELOG.md | git apply --3way
           git commit -a -m "$message"
