--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -14,7 +14,7 @@ jobs:
           version=$(.github/scripts/get-version.sh)
           # TODO update with your main branch versioning strategy
           version=${version//-dev/}
-          release_branch_name=$(echo $version | sed -E 's,([0-9]+)\.([0-9]+)\.0,release/v\1.\2.x,')
+          release_branch_name=$(echo $version | sed -E 's/([0-9]+)\.([0-9]+)\.0/release\/v\1.\2.x/')
 
           git push origin HEAD:$release_branch_name
 
@@ -32,7 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           message="Prepare release $VERSION"
-          branch=prepare-release-$VERSION
+          branch="prepare-release-$VERSION"
 
           git commit -a -m "$message"
           git push origin HEAD:$branch
@@ -62,7 +62,7 @@ jobs:
           echo "NEXT_VERSION=$next_version" >> $GITHUB_ENV
 
       - name: Update version
-        run: .github/scripts/update-version.sh "$NEXT_VERSION"
+        run: .github/scripts/update-version.sh $NEXT_VERSION
 
       - name: Set git user
         run: .github/scripts/set-git-user.sh
@@ -73,7 +73,7 @@ jobs:
         run: |
           message="Update version to $NEXT_VERSION"
           body="Update version to \`$NEXT_VERSION\`."
-          branch=update-version-to-$NEXT_VERSION
+          branch="update-version-to-$NEXT_VERSION"
 
           git commit -a -m "$message"
           git push origin HEAD:$branch
