--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,6 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Publish to package registry
-        run: |
-          # TODO publish to package registry
-          echo ...
-
       - name: Set environment variables
         run: |
           version=$(.github/scripts/get-version.sh)
@@ -30,36 +25,27 @@ jobs:
             echo "unexpected version: $version"
             exit 1
           fi
-          if [[ $patch == 0 ]]; then
-            if [[ $minor == 0 ]]; then
-              prior_major=$((major - 1))
-              prior_minor=$(sed -n "s/^## Version $prior_major\.\([0-9]\+\)\..*/\1/p" CHANGELOG.md | head -1)
-              prior_version="$prior_major.$prior_minor"
-            else
-              prior_version="$major.$((minor - 1)).0"
-            fi
-          else
-            prior_version="$major.$minor.$((patch - 1))"
+          if [[ $patch != 0 ]]; then
+            prior_version_for_patch_notes="$major.$minor.$((patch - 1))"
           fi
           echo "VERSION=$version" >> $GITHUB_ENV
-          echo "PRIOR_VERSION=$prior_version" >> $GITHUB_ENV
+          echo "PRIOR_VERSION_FOR_PATCH_NOTES=$prior_version_for_patch_notes" >> $GITHUB_ENV
 
       - name: Generate release notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # conditional block not indented because of the heredoc
-          if [[ $VERSION != *.0 ]]; then
+          if [[ ! -z $PRIOR_VERSION_FOR_PATCH_NOTES ]]; then
           cat > release-notes.txt << EOF
-          This is a patch release on the previous $PRIOR_VERSION release, fixing the issue(s) below.
+          This is a patch release on the previous $PRIOR_VERSION_FOR_PATCH_NOTES release, fixing the issue(s) below.
 
           EOF
           fi
 
-          # the last complex regex is needed because markdown docs render newlines as soft wraps
+          # the complex perl regex is needed because markdown docs render newlines as soft wraps
           # while release notes render them as line breaks
           sed -n "0,/^## Version $VERSION/d;/^## Version /q;p" CHANGELOG.md \
-            | sed -E "s,\[#([0-9]+)]\(https://github.com/$GITHUB_REPOSITORY/(pull|issues)/[0-9]+\),#\1," \
             | perl -0pe 's/(?<!\n)\n *(?!\n)(?![-*] )(?![1-9]+\. )/ /g' \
             >> release-notes.txt
 
@@ -89,7 +75,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           message="Add the release date for $VERSION to the change log"
-          branch=add-release-date-for-$VERSION
+          branch="add-release-date-for-$VERSION"
 
           git commit -a -m "$message"
           git push origin HEAD:$branch
