--- a/.github/workflows/reusable-open-issue-on-failure.yml
+++ b/.github/workflows/reusable-open-issue-on-failure.yml
@@ -11,7 +11,7 @@ jobs:
 
       - name: Open issue
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh issue create --title "$GITHUB_WORKFLOW #$GITHUB_RUN_NUMBER failed" \
                           --label bug \
