--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -10,12 +10,12 @@ jobs:
 
       - name: Set environment variables
         run: |
-          prior_version=$(.github/scripts/get-version.sh)
-          if [[ $prior_version =~ ([0-9]+\.[0-9]+)\.([0-9]+) ]]; then
+          version=$(.github/scripts/get-version.sh)
+          if [[ $version =~ ([0-9]+\.[0-9]+)\.([0-9]+) ]]; then
             major_minor="${BASH_REMATCH[1]}"
             patch="${BASH_REMATCH[2]}"
           else
-            echo "unexpected version: $prior_version"
+            echo "unexpected version: $version"
             exit 1
           fi
           echo "VERSION=$major_minor.$((patch + 1))" >> $GITHUB_ENV
