--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -57,9 +57,9 @@ jobs:
             echo "unexpected version: $version"
             exit 1
           fi
-          next_version=$major.$((minor + 1)).0
+          next_version="$major.$((minor + 1)).0"
           # TODO update with your main branch versioning strategy
-          next_version=$next_version-dev
+          next_version="${next_version}-dev"
           echo "NEXT_VERSION=$next_version" >> $GITHUB_ENV
 
       - name: Update version
