--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
           message="Add the release date for $VERSION to the change log"
-          branch="add-release-date-for-$VERSION"
+          branch="add-release-date-for-${VERSION}"
 
           git commit -a -m "$message"
           git push origin HEAD:$branch
