--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -20,6 +20,13 @@ jobs:
           fi
           echo "VERSION=$major_minor.$((patch + 1))" >> $GITHUB_ENV
 
+      - name: Check change log has been updated
+        run: |
+          if ! grep --quiet "^## Version $VERSION" CHANGELOG.md; then
+            echo the change log needs to be updated
+            exit 1
+          fi
+
       - name: Update version
         run: .github/scripts/update-version.sh $VERSION
 
