--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -10,6 +10,12 @@ jobs:
   backport:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          if [[ $GITHUB_REF_NAME != release/* ]]; then
+            echo this workflow should only be run against release branches
+            exit 1
+          fi
+
       - uses: actions/checkout@v3
         with:
           # history is needed to run git cherry-pick below
