--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -6,6 +6,12 @@ jobs:
   prepare-patch-release:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          if [[ $GITHUB_REF_NAME != release/* ]]; then
+            echo this workflow should only be run against release branches
+            exit 1
+          fi
+
       - uses: actions/checkout@v3
 
       - name: Set environment variables
