--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          if [[ $GITHUB_REF_NAME != release/* ]]; then
-            echo this workflow should only be run against release branches
-            exit 1
+          if [[ ! $GITHUB_REF_NAME =~ ^release/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo this workflow should only be run against long-term release branches
+            #exit 1
           fi
 
       - uses: actions/checkout@v3
