--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
-          if [[ $GITHUB_REF_NAME != release/* ]]; then
-            echo this workflow should only be run against release branches
-            exit 1
+          if [[ ! $GITHUB_REF_NAME =~ ^release/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo this workflow should only be run against long-term release branches
+            #exit 1
           fi
 
       - uses: actions/checkout@v3
@@ -17,7 +17,7 @@ jobs:
       - name: Set environment variables
         run: |
           version=$(.github/scripts/get-version.sh)
-          if [[ $version =~ ([0-9]+\.[0-9]+)\.([0-9]+) ]]; then
+          if [[ $version =~ ^([0-9]+\.[0-9]+)\.([0-9]+)$ ]]; then
             major_minor="${BASH_REMATCH[1]}"
             patch="${BASH_REMATCH[2]}"
           else
