--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -29,7 +29,15 @@ jobs:
           version=$(.github/scripts/get-version.sh)
           # TODO update with your main branch versioning strategy
           version=${version//-dev/}
-          release_branch_name=$(echo $version | sed -E 's/([0-9]+)\.([0-9]+)\.0/release\/v\1.\2.x/')
+          if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
+            release_branch_name=$(echo $version | sed -E 's/([0-9]+)\.([0-9]+)\.0/release\/v\1.\2.x/')
+          elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0 ]]; then
+            # pre-release version, e.g. 1.9.0rc
+            release_branch_name="release/v$version"
+          else
+            echo "unexpected version: $version"
+            exit 1
+          fi
 
           git push origin HEAD:$release_branch_name
 
@@ -71,14 +79,19 @@ jobs:
       - name: Set environment variables
         run: |
           version=$(.github/scripts/get-version.sh)
-          if [[ $version =~ ([0-9]+)\.([0-9]+)\.0 ]]; then
+          if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
+            next_version="$major.$((minor + 1)).0"
+          elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0 ]]; then
+            # pre-release version, e.g. 1.9.0rc
+            major="${BASH_REMATCH[1]}"
+            minor="${BASH_REMATCH[2]}"
+            next_version="$major.$minor.0"
           else
             echo "unexpected version: $version"
             exit 1
           fi
-          next_version="$major.$((minor + 1)).0"
           # TODO update with your main branch versioning strategy
           next_version="${next_version}-dev"
           echo "NEXT_VERSION=$next_version" >> $GITHUB_ENV
