--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Update version
         run: .github/scripts/update-version.sh $VERSION
 
+      - name: Update the change log with the approximate release date
+        run: |
+          date=$(date "+%Y-%m-%d")
+          sed -Ei "s/## Version $VERSION .*/## Version $VERSION ($date)/" CHANGELOG.md
+
       - name: Set git user
         run: .github/scripts/set-git-user.sh
 
