--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -9,7 +9,7 @@ jobs:
       - run: |
           if [[ ! $GITHUB_REF_NAME =~ ^release/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo this workflow should only be run against long-term release branches
-            #exit 1
+            exit 1
           fi
 
       - uses: actions/checkout@v3
