--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -96,6 +96,7 @@ jobs:
           fi
           # TODO update with your main branch versioning strategy
           next_version="${next_version}-dev"
+          echo "VERSION=$version" >> $GITHUB_ENV
           echo "NEXT_VERSION=$next_version" >> $GITHUB_ENV
 
       - name: Update version
