--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -105,7 +105,9 @@ jobs:
 
       - name: Update the change log on main
         run: |
-          sed -Ei "s/## Unreleased/## Unreleased\n\n## Version $VERSION (Unreleased)/" CHANGELOG.md
+          # the actual release date on main will be updated at the end of the release workflow
+          date=$(date "+%Y-%m-%d")
+          sed -Ei "s/^## Unreleased$/## Unreleased\n\n## Version $VERSION ($date)/" CHANGELOG.md
 
       - name: Set git user
         run: .github/scripts/set-git-user.sh
