--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -12,6 +12,11 @@ jobs:
             exit 1
           fi
 
+          if ! grep --quiet "^## Unreleased$" CHANGELOG.md; then
+            echo the change log is missing an \"Unreleased\" section
+            exit 1
+          fi
+
       - uses: actions/checkout@v3
 
       - name: Set environment variables
@@ -26,20 +31,13 @@ jobs:
           fi
           echo "VERSION=$major_minor.$((patch + 1))" >> $GITHUB_ENV
 
-      - name: Check change log has been updated
-        run: |
-          if ! grep --quiet "^## Version $VERSION " CHANGELOG.md; then
-            echo the change log needs to be updated
-            exit 1
-          fi
-
       - name: Update version
         run: .github/scripts/update-version.sh $VERSION
 
       - name: Update the change log with the approximate release date
         run: |
           date=$(date "+%Y-%m-%d")
-          sed -Ei "s/## Version $VERSION .*/## Version $VERSION ($date)/" CHANGELOG.md
+          sed -Ei "s/^## Unreleased$/## Version $VERSION ($date)/" CHANGELOG.md
 
       - name: Set git user
         run: .github/scripts/set-git-user.sh
