--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -81,7 +81,9 @@ jobs:
       - name: Set environment variables
         run: |
           version=$(.github/scripts/get-version.sh)
-          if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0-dev$ ]]; then
+          # TODO update with your main branch versioning strategy
+          version="${version//-dev/}"
+          if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
             next_version="$major.$((minor + 1)).0"
@@ -95,9 +97,7 @@ jobs:
             exit 1
           fi
           # TODO update with your main branch versioning strategy
-          next_version="${next_version}-dev"
-          version=${version//-dev/}
-          echo "NEXT_VERSION=$next_version" >> $GITHUB_ENV
+          echo "NEXT_VERSION=${next_version}-dev" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
 
       - name: Update version
