--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -1,6 +1,10 @@
 name: Prepare release branch
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Optionally override the version number for the release"
+        required: false
 
 jobs:
   prereqs:
@@ -26,11 +30,16 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Create release branch
-        id: create-release-branch
+        env:
+          VERSION: ${{ github.event.inputs.version }}
         run: |
-          version=$(.github/scripts/get-version.sh)
-          # TODO update with your main branch versioning strategy
-          version=${version//-dev/}
+          if [[ -z $VERSION ]]; then
+            version=$(.github/scripts/get-version.sh)
+            version=${version//-dev/}
+          else
+            version=$VERSION
+          fi
+
           if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
             release_branch_name=$(echo $version | sed -E 's/([0-9]+)\.([0-9]+)\.0/release\/v\1.\2.x/')
           elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0 ]]; then
@@ -80,9 +89,13 @@ jobs:
 
       - name: Set environment variables
         run: |
-          version=$(.github/scripts/get-version.sh)
-          # TODO update with your main branch versioning strategy
-          version="${version//-dev/}"
+          if [[ -z $VERSION ]]; then
+            version=$(.github/scripts/get-version.sh)
+            version="${version//-dev/}"
+          else
+            version=$VERSION
+          fi
+
           if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
@@ -96,7 +109,6 @@ jobs:
             echo "unexpected version: $version"
             exit 1
           fi
-          # TODO update with your main branch versioning strategy
           echo "NEXT_VERSION=${next_version}-dev" >> $GITHUB_ENV
           echo "VERSION=$version" >> $GITHUB_ENV
 
