--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -2,8 +2,8 @@ name: Prepare release branch
 on:
   workflow_dispatch:
     inputs:
-      version:
-        description: "Optionally override the version number for the release"
+      prerelease_version:
+        description: "Pre-release version number? (e.g. 1.9.0-rc.2)"
         required: false
 
 jobs:
@@ -23,6 +23,15 @@ jobs:
             exit 1
           fi
 
+          if [[ ! -z $PRERELEASE_VERSION ]]; then
+            version=$(.github/scripts/get-version.sh)
+            version=${version//-dev/}
+            if [[ $PRERELEASE_VERSION != ${version}-* ]]; then
+              echo $PRERELEASE_VERSION is not a prerelease for the version on main ($version)
+              exit 1
+            fi
+          fi
+
   create-pull-request-against-release-branch:
     runs-on: ubuntu-latest
     needs: prereqs
@@ -31,19 +40,19 @@ jobs:
 
       - name: Create release branch
         env:
-          VERSION: ${{ github.event.inputs.version }}
+          PRERELEASE_VERSION: ${{ github.event.inputs.prerelease_version }}
         run: |
-          if [[ -z $VERSION ]]; then
+          if [[ -z $PRERELEASE_VERSION ]]; then
             version=$(.github/scripts/get-version.sh)
             version=${version//-dev/}
           else
-            version=$VERSION
+            version=$PRERELEASE_VERSION
           fi
 
           if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
             release_branch_name=$(echo $version | sed -E 's/([0-9]+)\.([0-9]+)\.0/release\/v\1.\2.x/')
-          elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0 ]]; then
-            # pre-release version, e.g. 1.9.0rc
+          elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0- ]]; then
+            # pre-release version, e.g. 1.9.0-rc.2
             release_branch_name="release/v$version"
           else
             echo "unexpected version: $version"
@@ -88,20 +97,22 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set environment variables
+        env:
+          PRERELEASE_VERSION: ${{ github.event.inputs.prerelease_version }}
         run: |
-          if [[ -z $VERSION ]]; then
+          if [[ -z $PRERELEASE_VERSION ]]; then
             version=$(.github/scripts/get-version.sh)
-            version="${version//-dev/}"
+            version=${version//-dev/}
           else
-            version=$VERSION
+            version=$PRERELEASE_VERSION
           fi
 
           if [[ $version =~ ^([0-9]+)\.([0-9]+)\.0$ ]]; then
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
             next_version="$major.$((minor + 1)).0"
-          elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0 ]]; then
-            # pre-release version, e.g. 1.9.0rc
+          elif [[ $version =~ ^([0-9]+)\.([0-9]+)\.0- ]]; then
+            # pre-release version, e.g. 1.9.0-rc.2
             major="${BASH_REMATCH[1]}"
             minor="${BASH_REMATCH[2]}"
             next_version="$major.$minor.0"
