--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -22,9 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set git user
-        run: |
-          git config user.name opentelemetrybot
-          git config user.email 107717825+opentelemetrybot@users.noreply.github.com
+        run: .github/scripts/set-git-user.sh
 
       - name: Create pull request
         env:
