--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -76,9 +76,7 @@ jobs:
           sed -Ei "s/^## Unreleased$/## Version $VERSION ($date)/" CHANGELOG.md
 
       - name: Set git user
-        run: |
-          git config user.name opentelemetrybot
-          git config user.email 107717825+opentelemetrybot@users.noreply.github.com
+        run: .github/scripts/set-git-user.sh
 
       - name: Create pull request against the release branch
         env:
@@ -138,9 +136,7 @@ jobs:
           sed -Ei "s/^## Unreleased$/## Unreleased\n\n## Version $VERSION ($date)/" CHANGELOG.md
 
       - name: Set git user
-        run: |
-          git config user.name opentelemetrybot
-          git config user.email 107717825+opentelemetrybot@users.noreply.github.com
+        run: .github/scripts/set-git-user.sh
 
       - name: Create pull request against main
         env:
