--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -136,9 +136,7 @@ jobs:
           fi
 
       - name: Set git user
-        run: |
-          git config user.name opentelemetrybot
-          git config user.email 107717825+opentelemetrybot@users.noreply.github.com
+        run: .github/scripts/set-git-user.sh
 
       - name: Create pull request against main
         env:
