--- a/.github/workflows/prepare-patch-release.yml
+++ b/.github/workflows/prepare-patch-release.yml
@@ -39,8 +39,8 @@ jobs:
           date=$(date "+%Y-%m-%d")
           sed -Ei "s/^## Unreleased$/## Version $VERSION ($date)/" CHANGELOG.md
 
-      - name: Set git user
-        run: .github/scripts/set-git-user.sh
+      - name: Set git user to bot account
+        run: .github/scripts/set-git-user-to-bot-account.sh
 
       - name: Create pull request
         env:
