--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -37,7 +37,8 @@ jobs:
 
   create-pull-request-against-release-branch:
     runs-on: ubuntu-latest
-    needs: prereqs
+    needs:
+      - prereqs
     steps:
       - uses: actions/checkout@v3
 
@@ -95,7 +96,8 @@ jobs:
 
   create-pull-request-against-main:
     runs-on: ubuntu-latest
-    needs: prereqs
+    needs:
+      - prereqs
     steps:
       - uses: actions/checkout@v3
 
