--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,6 +97,7 @@ jobs:
                             v$VERSION
 
   merge-change-log-to-main:
+    runs-on: ubuntu-latest
     needs:
       - release
     steps:
