--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       prerelease_version:
-        description: "Pre-release version number? (e.g. 1.9.0-rc.2)"
+        description: "Use a pre-release version number? (e.g. 1.9.0-rc.2)"
         required: false
 
 jobs:
