--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,8 @@ jobs:
         with:
           ref: main
 
-      - run: |
+      - name: Check that change log update was merged to main
+        run: |
           if [[ $VERSION =~ ^[0-9]+\.[0-9]+\.0 ]]; then
             # not making a patch release
             if ! grep --quiet "^## Version $VERSION " CHANGELOG.md; then
@@ -122,7 +123,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           release_date=$(gh release view v$VERSION --json publishedAt --jq .publishedAt | sed 's/T.*//')
-          RELEASE_DATE=$release_date .github/scripts/update-change-log-in-main.sh
+          RELEASE_DATE=$release_date .github/scripts/merge-change-log-after-release.sh
 
       - name: Use CLA approved github bot
         run: .github/scripts/use-cla-approved-github-bot.sh
