--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,9 +147,8 @@ jobs:
           body="Merge log updates from \`$GITHUB_REF_NAME\`."
           branch="opentelemetrybot/merge-change-log-updates-from-${GITHUB_REF_NAME//\//-}"
 
+          git checkout -b $branch
           git commit -a -m "$message"
-          git push origin HEAD:$branch
+          git push --set-upstream origin $branch
           gh pr create --title "$message" \
-                       --body "$body" \
-                       --head $branch \
-                       --base main
+                       --body "$body"
