--- a/.github/workflows/reusable-shell-script-check.yml
+++ b/.github/workflows/reusable-shell-script-check.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  shell-check:
+  shell-script-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
