--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,11 @@ jobs:
         run: |
           pip install -e .
 
+  shell-script-check:
+    # release branches are excluded to avoid unnecessary maintenance if new shell checks are added
+    if: ${{ !startsWith(github.ref_name, 'release/') }}
+    uses: ./.github/workflows/reusable-shell-script-check.yml
+
   markdown-link-check:
     # release branches are excluded to avoid unnecessary maintenance if external links break
     if: ${{ !startsWith(github.ref_name, 'release/') }}
@@ -35,15 +40,16 @@ jobs:
 
   misspell-check:
     # release branches are excluded to avoid unnecessary maintenance if new misspellings are added
-    # to the misspell dictionary
     if: ${{ !startsWith(github.ref_name, 'release/') }}
     uses: ./.github/workflows/reusable-misspell-check.yml
 
   required-status-check:
+    # shell-script-check is not required so that pull requests will not be blocked if new shell
+    #   checks are added
     # markdown-link-check is not required so that pull requests will not be blocked if external
-    # links break
-    # similarly misspell-check is not required so that pull requests will not be blocked if new
-    # misspellings are added to the misspell dictionary
+    #   links break
+    # misspell-check is not required so that pull requests will not be blocked if new misspellings
+    #   are added to the misspell dictionary
     needs:
       - build
     runs-on: ubuntu-latest
