--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+    outputs:
+      version: ${{ steps.create-github-release.outputs.version }}
     steps:
       - run: |
           if [[ $GITHUB_REF_NAME != release/* ]]; then
@@ -85,7 +87,8 @@ jobs:
             | perl -0pe 's/(?<!\n)\n *(?!\n)(?![-*] )(?![1-9]+\. )/ /g' \
             >> /tmp/release-notes.txt
 
-      - name: Create GitHub release
+      - id: create-github-release
+        name: Create GitHub release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -97,6 +100,8 @@ jobs:
                             --discussion-category announcements \
                             v$VERSION
 
+          echo "::set-output name=version::$VERSION"
+
   merge-change-log-to-main:
     runs-on: ubuntu-latest
     needs:
@@ -104,12 +109,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set environment variables
-        run: |
-          version=$(.github/scripts/get-version.sh)
-          echo "VERSION=$version" >> $GITHUB_ENV
-
-      - name: Copy updated change log section
+      - name: Copy change log section from release branch
+        env:
+          VERSION: ${{ needs.release.outputs.version }}
         run: |
           sed -n "0,/^## Version $VERSION /d;/^## Version /q;p" CHANGELOG.md \
             > /tmp/changelog-section.md
@@ -118,8 +120,9 @@ jobs:
         with:
           ref: main
 
-      - name: Copy change log updates to main
+      - name: Merge change log to main
         env:
+          VERSION: ${{ needs.release.outputs.version }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           release_date=$(gh release view v$VERSION --json publishedAt --jq .publishedAt | sed 's/T.*//')
@@ -130,6 +133,7 @@ jobs:
 
       - name: Create pull request against main
         env:
+          VERSION: ${{ needs.release.outputs.version }}
           # not using secrets.GITHUB_TOKEN since pull requests from that token do not run workflows
           GH_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: |
