--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,27 +29,24 @@ jobs:
           pip install -e .
 
   shell-script-check:
-    # release branches are excluded to avoid unnecessary maintenance if new shell checks are added
+    # release branches are excluded to avoid unnecessary maintenance
     if: "!startsWith(github.ref_name, 'release/')"
     uses: ./.github/workflows/reusable-shell-script-check.yml
 
   markdown-link-check:
-    # release branches are excluded to avoid unnecessary maintenance if external links break
+    # release branches are excluded to avoid unnecessary maintenance
     if: "!startsWith(github.ref_name, 'release/')"
     uses: ./.github/workflows/reusable-markdown-link-check.yml
 
   misspell-check:
-    # release branches are excluded to avoid unnecessary maintenance if new misspellings are added
+    # release branches are excluded to avoid unnecessary maintenance
     if: "!startsWith(github.ref_name, 'release/')"
     uses: ./.github/workflows/reusable-misspell-check.yml
 
   required-status-check:
-    # shell-script-check is not required so that pull requests will not be blocked if new shell
-    #   checks are added
-    # markdown-link-check is not required so that pull requests will not be blocked if external
-    #   links break
-    # misspell-check is not required so that pull requests will not be blocked if new misspellings
-    #   are added to the misspell dictionary
+    # shell-script-check is not required so pull requests are not blocked if new checks are added
+    # markdown-link-check is not required so pull requests are not blocked if external links break
+    # misspell-check is not required so pull requests are not blocked if new misspellings are added
     needs:
       - build
     if: always()
