--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,29 +28,39 @@ jobs:
         run: |
           pip install -e .
 
-  shell-script-check:
-    # release branches are excluded to avoid unnecessary maintenance
-    if: "!startsWith(github.ref_name, 'release/')"
-    uses: ./.github/workflows/reusable-shell-script-check.yml
-
   markdown-link-check:
     # release branches are excluded to avoid unnecessary maintenance
     if: "!startsWith(github.ref_name, 'release/')"
     uses: ./.github/workflows/reusable-markdown-link-check.yml
+
+  markdown-lint:
+    # release branches are excluded to avoid unnecessary maintenance
+    if: "!startsWith(github.ref_name, 'release/')"
+    uses: ./.github/workflows/reusable-markdown-lint.yml
 
   misspell-check:
     # release branches are excluded to avoid unnecessary maintenance
     if: "!startsWith(github.ref_name, 'release/')"
     uses: ./.github/workflows/reusable-misspell-check.yml
 
+  shell-script-check:
+    # release branches are excluded to avoid unnecessary maintenance
+    if: "!startsWith(github.ref_name, 'release/')"
+    uses: ./.github/workflows/reusable-shell-script-check.yml
+
   required-status-check:
-    # shell-script-check is not required so pull requests are not blocked if new checks are added
     # markdown-link-check is not required so pull requests are not blocked if external links break
-    # misspell-check is not required so pull requests are not blocked if new misspellings are added
     needs:
       - build
+      - markdown-lint
+      - misspell-check
+      - shell-script-check
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - if: needs.build.result != 'success'
+      - if: >
+          needs.build.result != 'success' ||
+          needs.markdown-lint.result != 'success' ||
+          needs.misspell-check.result != 'success' ||
+          needs.shell-script-check.result != 'success'
         run: exit 1
