--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,21 @@ on:
   workflow_dispatch:
 
 jobs:
+  authorization:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build
+        env:
+          AUTHORIZED: ${{ github.actor == 'trask' }}
+        run: |
+          if [[ $AUTHORIZED != "true" ]]; then
+            echo user ${{ github.actor }} is not authorized to run this workflow
+            exit 1
+          fi
+
   build:
+    needs:
+      - authorization
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -103,7 +117,6 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
   merge-change-log-to-main:
-    runs-on: ubuntu-latest
     needs:
       - release
     uses: trask/.github/.github/workflows/merge-change-log-to-main.yml@main
